--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_ecell_round"
+        android:icon="@mipmap/ic_ecell_icon_round_new"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_ecell_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.FullScreen">
 
