--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             buildConfigField "String", "BASE_URL", "\"https://ecell.nitrr.ac.in/\""
-            buildConfigField "String", "BQUIZ_URL", "\"wss://206.189.143.11:9000/bquiz/live/question/\""
+            buildConfigField "String", "BQUIZ_URL", "\"ws://206.189.143.11:9000/bquiz/live/question/\""
         }
 
         debug {
@@ -32,7 +32,7 @@ android {
             manifestPlaceholders = [usesCleartextTraffic:"true"]
 
             buildConfigField "String", "BASE_URL", "\"https://ecell.nitrr.ac.in/\""
-            buildConfigField "String", "BQUIZ_URL", "\"wss://206.189.143.11:9000/bquiz/live/question/\""
+            buildConfigField "String", "BQUIZ_URL", "\"ws://206.189.143.11:9000/bquiz/live/question/\""
         }
     }
 
