--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.nitrr.ecell.esummit.ecellapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,7 +14,9 @@
         android:icon="@mipmap/ic_ecell_icon_round_new"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="${usesCleartextTraffic}"
         android:theme="@style/AppTheme.FullScreen">
+
         <receiver
             android:name=".misc.NetworkChangeReceiver"
             android:enabled="true">
