--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
         <activity
             android:name=".activities.EventActivity"
             android:screenOrientation="nosensor"
-            android:theme="@style/AppTheme.FullScreen"/>
+            android:theme="@style/AppTheme.FullScreen">
+        </activity>
 
         <activity
             android:name=".activities.ESummitActivity"
