--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_ecell_icon_round_new"
+        android:icon="@mipmap/ic_ecell_with_text_curved"
+        android:roundIcon="@mipmap/ic_ecell_icon_round_new"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.FullScreen"
